mobile header finished

--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
   </header>
   <!-- /header -->
 
+  <!-- main -->
+  <main>
+    <!-- hero -->
+    <section class="hero">
+      <div class="hero__content">
+        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+        <button class="btn hero__btn" type="button" data-modal-open>Заказать услугу</button>
+      </div>
+    </section>
+    <!-- /hero -->
+  </main>
+  <!-- /main -->
 
   <!-- scripts -->
   <script src="./js/modal.js"></script>
