--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="container">
         <!-- ! h2 should be hidden -->
         <h2 class="visually-hidden">Преимущества работы с нами</h2>
-        <ul class="benefits list">
+        <ul class="benefits">
           <li class="benefits__item">
             <div class="benefits__icon-box">
               <svg class="benefits__icon" width="70" height="70">
