benefits section added

--- a/index.html
+++ b/index.html
@@ -173,6 +173,37 @@
     </section>
     <!-- /section -->
 
+    <section class="section services-section">
+      <div class="container">
+
+        <h2 class="section__title ">Чем мы занимаемся</h2>
+
+        <ul class="services">
+          <li class="services__item">
+            <img src="./images/services/img-1.jpg"
+              alt="Разработка эффектвных решений с нуля">
+            <div class="services__img-label">
+              <p>Десктопные приложения</p>
+            </div>
+          </li>
+          <li class="services__item">
+            <img src="./images/services/img-2.jpg"
+              alt="Создание мобильных приложений">
+            <div class="services__img-label">
+              <p>Мобильные приложения</p>
+            </div>
+          </li>
+          <li class="services__item">
+            <img src="./images/services/img-3.jpg"
+              alt="Современные стандарты проектирования">
+            <div class="services__img-label">
+              <p>Дизайнерские решения</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
   </main>
   <!-- /main -->
 
