--- a/index.html
+++ b/index.html
@@ -310,28 +310,16 @@
                 srcset="
                 ./images/team/teammate1-desktop-270.jpg 270w,
                 ./images/team/teammate1-desktop-540.jpg 540w,
-                ./images/team/teammate1-desktop-810.jpg 810w
-                "
-                type="image/jpeg"
-                media="(min-width:1200px)">
-
-              <source
-                srcset="
+                ./images/team/teammate1-desktop-810.jpg 810w,
                 ./images/team/teammate1-tablet-354.jpg 354w,
                 ./images/team/teammate1-tablet-708.jpg 708w,
-                ./images/team/teammate1-tablet-1062.jpg 1062w
-                "
-                type="image/jpeg"
-                media="(min-width:768px)">
-
-              <source
-                srcset="
+                ./images/team/teammate1-tablet-1062.jpg 1062w,
                 ./images/team/teammate1-mobile-450.jpg 450w,
                 ./images/team/teammate1-mobile-900.jpg 900w,
                 ./images/team/teammate1-mobile-1350.jpg 1350w
                 "
                 type="image/jpeg"
-                media="(max-width:767.98px)">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
 
               <img
                 src="./images/team/teammate1-mobile-450.jpg"
@@ -385,61 +373,35 @@
                 srcset="
                 ./images/team/teammate2-desktop-270.webp 270w,
                 ./images/team/teammate2-desktop-540.webp 540w,
-                ./images/team/teammate2-desktop-810.webp 810w
-                "
-                type="image/webp"
-                media="(min-width:1200px)">
-
-              <source
-                srcset="
+                ./images/team/teammate2-desktop-810.webp 810w,
                 ./images/team/teammate2-tablet-354.webp 354w,
                 ./images/team/teammate2-tablet-708.webp 708w,
-                ./images/team/teammate2-tablet-1062.webp 1062w
-                "
-                type="image/webp"
-                media="(min-width:768px)">
-
-              <source
-                srcset="
+                ./images/team/teammate2-tablet-1062.webp 1062w,
                 ./images/team/teammate2-mobile-450.webp 450w,
                 ./images/team/teammate2-mobile-900.webp 900w,
                 ./images/team/teammate2-mobile-1350.webp 1350w
                 "
                 type="image/webp"
-                media="(max-width:767.98px)">
-
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
               <!-- jpg -->
               <source
                 srcset="
                 ./images/team/teammate2-desktop-270.jpg 270w,
                 ./images/team/teammate2-desktop-540.jpg 540w,
-                ./images/team/teammate2-desktop-810.jpg 810w
-                "
-                type="image/jpeg"
-                media="(min-width:1200px)">
-
-              <source
-                srcset="
+                ./images/team/teammate2-desktop-810.jpg 810w,
                 ./images/team/teammate2-tablet-354.jpg 354w,
                 ./images/team/teammate2-tablet-708.jpg 708w,
-                ./images/team/teammate2-tablet-1062.jpg 1062w
-                "
-                type="image/jpeg"
-                media="(min-width:768px)">
-
-              <source
-                srcset="
+                ./images/team/teammate2-tablet-1062.jpg 1062w,
                 ./images/team/teammate2-mobile-450.jpg 450w,
                 ./images/team/teammate2-mobile-900.jpg 900w,
                 ./images/team/teammate2-mobile-1350.jpg 1350w
                 "
                 type="image/jpeg"
-                media="(max-width:767.98px)">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
 
               <img
                 src="./images/team/teammate2-mobile-450.jpg"
-                alt="Ольга Репина"
-                width="270px">
+                alt="Ольга Репина">
             </picture>
 
             <div class="team__teammate-info">
@@ -482,68 +444,41 @@
 
           <!-- 3rd item -->
           <li class="team__item">
-
             <picture>
               <!-- webp -->
               <source
                 srcset="
                 ./images/team/teammate3-desktop-270.webp 270w,
                 ./images/team/teammate3-desktop-540.webp 540w,
-                ./images/team/teammate3-desktop-810.webp 810w
-                "
-                type="image/webp"
-                media="(min-width:1200px)">
-
-              <source
-                srcset="
+                ./images/team/teammate3-desktop-810.webp 810w,
                 ./images/team/teammate3-tablet-354.webp 354w,
                 ./images/team/teammate3-tablet-708.webp 708w,
-                ./images/team/teammate3-tablet-1062.webp 1062w
-                "
-                type="image/webp"
-                media="(min-width:768px)">
-
-              <source
-                srcset="
+                ./images/team/teammate3-tablet-1062.webp 1062w,
                 ./images/team/teammate3-mobile-450.webp 450w,
                 ./images/team/teammate3-mobile-900.webp 900w,
                 ./images/team/teammate3-mobile-1350.webp 1350w
                 "
                 type="image/webp"
-                media="(max-width:767.98px)">
-
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
               <!-- jpg -->
               <source
                 srcset="
                 ./images/team/teammate3-desktop-270.jpg 270w,
                 ./images/team/teammate3-desktop-540.jpg 540w,
-                ./images/team/teammate3-desktop-810.jpg 810w
-                "
-                type="image/jpeg"
-                media="(min-width:1200px)">
-
-              <source
-                srcset="
+                ./images/team/teammate3-desktop-810.jpg 810w,
                 ./images/team/teammate3-tablet-354.jpg 354w,
                 ./images/team/teammate3-tablet-708.jpg 708w,
-                ./images/team/teammate3-tablet-1062.jpg 1062w
-                "
-                type="image/jpeg"
-                media="(min-width:768px)">
-
-              <source
-                srcset="
+                ./images/team/teammate3-tablet-1062.jpg 1062w,
                 ./images/team/teammate3-mobile-450.jpg 450w,
                 ./images/team/teammate3-mobile-900.jpg 900w,
                 ./images/team/teammate3-mobile-1350.jpg 1350w
                 "
                 type="image/jpeg"
-                media="(max-width:767.98px)">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
 
               <img
                 src="./images/team/teammate3-mobile-450.jpg"
-                alt="Николай Тарасов"
-                width="270px">
+                alt="Николай Тарасов">
             </picture>
 
             <div class="team__teammate-info">
@@ -593,61 +528,35 @@
                 srcset="
                 ./images/team/teammate4-desktop-270.webp 270w,
                 ./images/team/teammate4-desktop-540.webp 540w,
-                ./images/team/teammate4-desktop-810.webp 810w
-                "
-                type="image/webp"
-                media="(min-width:1200px)">
-
-              <source
-                srcset="
+                ./images/team/teammate4-desktop-810.webp 810w,
                 ./images/team/teammate4-tablet-354.webp 354w,
                 ./images/team/teammate4-tablet-708.webp 708w,
-                ./images/team/teammate4-tablet-1062.webp 1062w
-                "
-                type="image/webp"
-                media="(min-width:768px)">
-
-              <source
-                srcset="
+                ./images/team/teammate4-tablet-1062.webp 1062w,
                 ./images/team/teammate4-mobile-450.webp 450w,
                 ./images/team/teammate4-mobile-900.webp 900w,
                 ./images/team/teammate4-mobile-1350.webp 1350w
                 "
                 type="image/webp"
-                media="(max-width:767.98px)">
-
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
               <!-- jpg -->
               <source
                 srcset="
                 ./images/team/teammate4-desktop-270.jpg 270w,
                 ./images/team/teammate4-desktop-540.jpg 540w,
-                ./images/team/teammate4-desktop-810.jpg 810w
-                "
-                type="image/jpeg"
-                media="(min-width:1200px)">
-
-              <source
-                srcset="
+                ./images/team/teammate4-desktop-810.jpg 810w,
                 ./images/team/teammate4-tablet-354.jpg 354w,
                 ./images/team/teammate4-tablet-708.jpg 708w,
-                ./images/team/teammate4-tablet-1062.jpg 1062w
-                "
-                type="image/jpeg"
-                media="(min-width:768px)">
-
-              <source
-                srcset="
+                ./images/team/teammate4-tablet-1062.jpg 1062w,
                 ./images/team/teammate4-mobile-450.jpg 450w,
                 ./images/team/teammate4-mobile-900.jpg 900w,
                 ./images/team/teammate4-mobile-1350.jpg 1350w
                 "
                 type="image/jpeg"
-                media="(max-width:767.98px)">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
 
               <img
                 src="./images/team/teammate4-mobile-450.jpg"
-                alt="Михаил Ермаков"
-                width="270px">
+                alt="Михаил Ермаков">
             </picture>
 
 
